--- a/HairSalon/appsettings.json
+++ b/HairSalon/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Port=3306;database=johnny_duverseau;uid=root;pwd=harmony2082;"
+      "DefaultConnection": "Server=localhost;Port=3306;database=hair_salon;uid=root;pwd=harmony2082;"
   }
 }
